--- a/index.html
+++ b/index.html
@@ -3,36 +3,61 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Profile</title>
+  <title>Lawrence</title>
+  <link rel="stylesheet" href="css-My site/styles.css">
+  <link rel="icon" href="css-My site/favicon.ico">
 </head>
 
 <body>
-  <table>
-    <td> <img src="me.jpg" alt="Lawrence profile picture"></td>
-    <td>
-      <h1>Hi, I'm Lawrence</h1>
-      <strong>I work as a software engineer at EY GDS</strong><br>
-      <br>
-      <em>soft kitty warm kitty little ball of fur <br>happy kitty sleep kity pur pur pur <br> -Lawrence</em>
-      <br>
-    </td>
-  </table>
+  <div class="topContainer">
+    <img class="topcld" src="images/cloud.png" alt="cld-img">
+    <h1>I'm Lawrence</h1>
+    <h2 class="main-para">A developer?</h2>
+    <img class="bottomcld" src="images/cloud.png" alt="cld-img">
+    <img class="mount-img" src="images/mountain.png" alt="mountain-img">
+  </div>
 
-  <hr>
+  <div class="middleContainer">
+    <div class="profile">
+      <img height="200px"  src="images/download.PNG" alt="profile-pic">
+      <h2>Hello.</h2>
+      <p>I'm a web developer, and I'm a psycopath that has coffee all day yet still 
+      manages to sleep 15 hours a day.  </p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="computer-img" src="https://media.giphy.com/media/iIGT8Y1rOYhBpdHh1C/giphy.gif" alt="">
+        <h3>Design and developement</h3>
+        <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth experience designing and developing mobile and web applications.</p>
+      </div>
+      <div class="skill-row">
+        <img class="joystick-img" src="https://cdn-icons-png.flaticon.com/512/1687/1687566.png" alt="gamer">
+        <br>
+        <br>
+        <h3>I'm also a Gamer</h3>
+        <p class="chilli ">But my best skill is actually playing games all day!!. </p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Think we make a good team ? Lets hit the map together</h3>
+      <p>Thanks for visiting my page, Hope you have a great rest of your day!. </p>
+      <a class="buttonClick" class="btn" href="mailto:lauralikhie@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
 
-  <h3>Bio</h3>
-  <p style="color: red">I know nothing about developing and stuff. <br>
-    I'm still in the learning process trynna get a grasp of the basics in web developing</p>
-  <br>
-  <p>I usually spend most of the time leaning to code from
-    <a target="_blank" href="https://www.w3schools.com/">Coding websites</a>
-  </p>
 
-  <h3><a target="_blank" href="hobbies.html">My Hobbies and Skills</a></h3>
-  <hr>
-  <a target="_blank" href="contactInfo.html">
-    <h2>Contact me</h2>
-  </a>
+  <div class="bottomContainer">
+    <a class="footer-link" href="https://www.linkedin.com/in/lawrence-s-85258b174/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/Lawrenc48076747">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copyright">© 2018 Lawrence S.</p>
+  </div>
+
+
 </body>
 
 </html>
